added some funtionalities and edit some css design and also complete the footer section

--- a/public/AppData.json
+++ b/public/AppData.json
@@ -320,7 +320,7 @@
     ]
   },
   {
-    "image": "https://play-lh.googleusercontent.com/3aWGqSf3T_p3F6wc8FFvcZcnjWlxpZdNaqFVEvPwQ1gTOPkVoZwq6cYvfK9eCkwCXbRY",
+    "image": "https://cdn-1.webcatalog.io/catalog/canva-cn/canva-cn-icon.png?v=1757294759328",
     "title": "Canva",
     "companyName": "Canva",
     "id": 18,
